# notebooks

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
python/: requirements.txt
src/: binaural.py  gps.py  harp.py  poc.ipynb
src/ingestion/: Ingestion.ipynb  IngestionVR.ipynb  Ingestion_datasets.ipynb  VideoSlice.ipynb  batch_correlation.ipynb  batch_process.ipynb  do_analysis.ipynb  export.py  export_video.py  helpers.py  ingest_faulty_datasets.ipynb  missing_sync.py  modules.py  process_eeg.ipynb  process_stress.ipynb  schema.py  schemaVR.py
src/ingestion/legacy/: Ingestion.ipynb  ingestion_faulty.ipynb
src/ingestion/utils/: __init__.py  for_analysis.py  for_climate.py  for_empatica.py  for_eye_tracker.py  for_participant.py  for_participant_code.py  for_path_info.py  for_setpath.py
src/poc-v0/: binaural.py  biosensing.py  poc.ipynb
src/poc-v1/: Demo_API.ipynb  datastream_inspector.ipynb
src/poc-v1/Benchmarks/: Benchmark_Accelerometer.ipynb  Benchmark_EnobioEeg.ipynb  Benchmark_Microphone.ipynb  Benchmark_PupilLabs.ipynb  Benchmark_TinkerForge.ipynb  Benchmark_empatica.ipynb  benchmark_schemas.py
src/poc-v1/Benchmarks/FmulDataset/: FmulSchema.py  LansingDowntownNatural.ipynb  LansingDowntownUrban.ipynb  LansingNatural.ipynb  LansingUrban.ipynb  Main.ipynb  datastream_inspector.ipynb  helpers.py
src/testing/: do_show_eeg_results.ipynb  ingest_faulty_datasets.ipynb
