[project]
name = "emotional-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "ipyfilechooser>=0.6.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.6",
    "opencv-python>=4.11.0.86",
    "pluma-analysis>=0.10.0",
]
